force-app/main/default/objects/Assessment_Matrix__c/Assessment_Matrix__c.object-meta.xml
<CustomObject>
    <label>Assessment Matrix</label>
    <nameField>
        <displayFormat>AM-{00000000}</displayFormat>
        <label>Assessment Matrix No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Matrixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>