force-app/main/default/objects/Assessment_Matrix__c/fields/Accompanying_PCR_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_PCR_High_Risk__c</fullName>
    <label>High Risk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>