force-app/main/default/objects/Assessment_Matrix__c/fields/Accompanying_PCR_RAG__c.field-meta.xml
<CustomField>
    <fullName>Accompanying_PCR_RAG__c</fullName>
    <label>1.2.5 - Accompanying PCR RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>