force-app/main/default/objects/Assessment_Matrix__c/fields/BAU_Priorities_Summary__c.field-meta.xml
<CustomField>
    <fullName>BAU_Priorities_Summary__c</fullName>
    <label>BAU Priorities Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>