force-app/main/default/objects/Assessment_Matrix__c/fields/Capital_grant_on_gas_LCH_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Capital_grant_on_gas_LCH_High_Risk__c</fullName>
    <label>XCapital grant on-gas LCH - High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>