force-app/main/default/objects/Assessment_Matrix__c/fields/Capital_grant_on_gas_LCH_justification__c.field-meta.xml
<CustomField>
    <fullName>Capital_grant_on_gas_LCH_justification__c</fullName>
    <label>XCapital grant on-gas LCH justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>