force-app/main/default/objects/Assessment_Matrix__c/fields/Capital_grant_on_gas_LCH_RAG__c.field-meta.xml
<CustomField>
    <fullName>Capital_grant_on_gas_LCH_RAG__c</fullName>
    <label>XCapital grant on-gas LCH RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>