force-app/main/default/objects/Assessment_Matrix__c/fields/Carry_over_any_deviation_RAG__c.field-meta.xml
<CustomField>
    <fullName>Carry_over_any_deviation_RAG__c</fullName>
    <label>1.2.4 - Carry any deviation to baselines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>