force-app/main/default/objects/Assessment_Matrix__c/fields/Co_funded_A_A_costs_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Co_funded_A_A_costs_High_Risk__c</fullName>
    <label>XCo-funded A&amp;A costs - High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>