force-app/main/default/objects/Assessment_Matrix__c/fields/Co_funded_A_A_costs_justification__c.field-meta.xml
<CustomField>
    <fullName>Co_funded_A_A_costs_justification__c</fullName>
    <label>XCo-funded A&amp;A costs justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>