force-app/main/default/objects/Assessment_Matrix__c/fields/Co_funded_A_A_costs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Co_funded_A_A_costs_RAG__c</fullName>
    <label>XCo-funded A&amp;A costs RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>