force-app/main/default/objects/Assessment_Matrix__c/fields/Co_funded_capital_costs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Co_funded_capital_costs_RAG__c</fullName>
    <label>2.24 - Co-funded capital costs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>