force-app/main/default/objects/Assessment_Matrix__c/fields/Compliant_wave_3_RAG__c.field-meta.xml
<CustomField>
    <fullName>Compliant_wave_3_RAG__c</fullName>
    <label>1.2.6 - Measures compliant - W3 - RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>