force-app/main/default/objects/Assessment_Matrix__c/fields/Comply_with_A_A_policy_justification__c.field-meta.xml
<CustomField>
    <fullName>Comply_with_A_A_policy_justification__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>