force-app/main/default/objects/Assessment_Matrix__c/fields/Comply_with_A_A_policy_RAG__c.field-meta.xml
<CustomField>
    <fullName>Comply_with_A_A_policy_RAG__c</fullName>
    <label>1.2.8 - Comply A&amp;A policy for project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>