force-app/main/default/objects/Assessment_Matrix__c/fields/Declarations_Total_Amber_Green__c.field-meta.xml
<CustomField>
    <fullName>Declarations_Total_Amber_Green__c</fullName>
    <formula>IF(ISPICKVAL( Homes_suitable_for_KPI1_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Homes_suitable_for_KPI2_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( PR_matches_previous_baseline_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Carry_over_any_deviation_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Accompanying_PCR_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Compliant_wave_3_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Key_project_roles_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Comply_with_A_A_policy_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Received_signed_copy_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Updated_PP_RR_RAG__c, &quot;Amber/Green&quot;), 1, 0) +
IF(ISPICKVAL( Phase_DCA_RAG__c, &quot;Amber/Green&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declarations - Total Amber/Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>