force-app/main/default/objects/Assessment_Matrix__c/fields/Ending_EPCs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Ending_EPCs_RAG__c</fullName>
    <label>4.2 - Ending EPCs - RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>