force-app/main/default/objects/Assessment_Matrix__c/fields/Forecast_drawdown_request_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Forecast_drawdown_request_High_Risk__c</fullName>
    <label>XForecast drawdown request - High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>