force-app/main/default/objects/Assessment_Matrix__c/fields/Forecast_drawdown_request_justification__c.field-meta.xml
<CustomField>
    <fullName>Forecast_drawdown_request_justification__c</fullName>
    <label>XForecast drawdown request justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>