force-app/main/default/objects/Assessment_Matrix__c/fields/Forecast_drawdown_request_RAG__c.field-meta.xml
<CustomField>
    <fullName>Forecast_drawdown_request_RAG__c</fullName>
    <label>XForecast drawdown request RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>