force-app/main/default/objects/Assessment_Matrix__c/fields/Grant_Drawdown_Total_Amber_Green__c.field-meta.xml
<CustomField>
    <fullName>Grant_Drawdown_Total_Amber_Green__c</fullName>
    <formula>IF(ISPICKVAL( Forecast_drawdown_request_RAG__c , &quot;Amber/Green&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XGrant Drawdown - Total Amber/Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>