force-app/main/default/objects/Assessment_Matrix__c/fields/Grant_Drawdown_Total_High_Risk_Red__c.field-meta.xml
<CustomField>
    <fullName>Grant_Drawdown_Total_High_Risk_Red__c</fullName>
    <formula>IF(AND(ISPICKVAL( Forecast_drawdown_request_RAG__c , &quot;Red&quot;), ISPICKVAL( Forecast_drawdown_request_High_Risk__c , &quot;Yes&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>XGrant Drawdown - Total High Risk Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>