force-app/main/default/objects/Assessment_Matrix__c/fields/Grant_funded_A_A_costs_justification__c.field-meta.xml
<CustomField>
    <fullName>Grant_funded_A_A_costs_justification__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>