force-app/main/default/objects/Assessment_Matrix__c/fields/Grant_funded_capital_costs_RAG__c.field-meta.xml
<CustomField>
    <fullName>Grant_funded_capital_costs_RAG__c</fullName>
    <label>2.21 - Grant funded capital costs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>