force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_Costs_Total_Amber__c.field-meta.xml
<CustomField>
    <fullName>Homes_Costs_Total_Amber__c</fullName>
    <formula>IF(ISPICKVAL( Grant_funded_capital_costs_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Grant_funded_A_A_costs_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Total_grant_funding_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Co_funded_capital_costs_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Total_co_funding_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Total_capital_costs_RAG__c, &quot;Amber&quot;), 1, 0) +
IF(ISPICKVAL( Total_A_A_costs_RAG__c, &quot;Amber&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes &amp; Costs - Total Amber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>