force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_Costs_Total_Normal_Red__c.field-meta.xml
<CustomField>
    <fullName>Homes_Costs_Total_Normal_Red__c</fullName>
    <formula>IF(AND(ISPICKVAL( Grant_funded_capital_costs_RAG__c, &quot;Red&quot;), ISPICKVAL( Grant_funded_capital_costs_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Grant_funded_A_A_costs_RAG__c, &quot;Red&quot;), ISPICKVAL( Grant_funded_A_A_costs_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Total_grant_funding_RAG__c, &quot;Red&quot;), ISPICKVAL( Total_grant_funding_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Co_funded_capital_costs_RAG__c, &quot;Red&quot;), ISPICKVAL( Co_funded_capital_costs_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Total_co_funding_RAG__c, &quot;Red&quot;), ISPICKVAL( Total_co_funding_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Total_capital_costs_RAG__c, &quot;Red&quot;), ISPICKVAL( Total_capital_costs_High_Risk__c , &quot;No&quot;)), 1, 0) +
IF(AND(ISPICKVAL( Total_A_A_costs_RAG__c, &quot;Red&quot;), ISPICKVAL( Total_A_A_costs_High_Risk__c , &quot;No&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Homes &amp; Costs - Total Normal Red</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>