force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_justification__c.field-meta.xml
<CustomField>
    <fullName>Homes_justification__c</fullName>
    <label>XHomes justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>