force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_RAG__c.field-meta.xml
<CustomField>
    <fullName>Homes_RAG__c</fullName>
    <label>XHomes RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>