force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_suitable_for_KPI1_Justification__c.field-meta.xml
<CustomField>
    <fullName>Homes_suitable_for_KPI1_Justification__c</fullName>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>