force-app/main/default/objects/Assessment_Matrix__c/fields/Homes_suitable_for_KPI2_RAG__c.field-meta.xml
<CustomField>
    <fullName>Homes_suitable_for_KPI2_RAG__c</fullName>
    <label>1.2.2 - Homes suitable for KPI 2 RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>