force-app/main/default/objects/Assessment_Matrix__c/fields/Key_project_roles_RAG__c.field-meta.xml
<CustomField>
    <fullName>Key_project_roles_RAG__c</fullName>
    <label>1.2.7 - Key Project Roles - RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>