force-app/main/default/objects/Assessment_Matrix__c/fields/KPI_s_justification__c.field-meta.xml
<CustomField>
    <fullName>KPI_s_justification__c</fullName>
    <label>XKPI&apos;s justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>