force-app/main/default/objects/Assessment_Matrix__c/fields/KPI_s_RAG__c.field-meta.xml
<CustomField>
    <fullName>KPI_s_RAG__c</fullName>
    <label>XKPI&apos;s RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>