force-app/main/default/objects/Assessment_Matrix__c/fields/KPIs_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>KPIs_High_Risk__c</fullName>
    <label>XKPI&apos;s - High Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Not_Applicable</valueSetName>
    </valueSet>
</CustomField>