force-app/main/default/objects/Assessment_Matrix__c/fields/Measure_types_installed_RAG__c.field-meta.xml
<CustomField>
    <fullName>Measure_types_installed_RAG__c</fullName>
    <label>4.4 - Measure types to be installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phase_Delivery_Confidence_Assessment</valueSetName>
    </valueSet>
</CustomField>